module/sg_database/main.tf
resource "aws_security_group" "SG_database" {
  name        = "database-sg"
  description = "Allow TLS inbound traffic"
  vpc_id = "${var.vpc_id}"
  tags = {
        Name = "Saad-SEcurity-Group"
    }
 

  ingress {
    description      = "TLS from VPC"
    from_port        = 3306
    to_port          = 3306
    protocol         = "TCP"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }


  ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "TCP"
    cidr_blocks      = ["0.0.0.0/0"]
 
  }


  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
